corrected hovering for collapsed and leaf, refs #207

--- a/update.css
+++ b/update.css
@@ -168,8 +168,9 @@ body.page-search #search-form #edit-keys-wrapper { border: 0; padding: 0; }
 /* Navigation im Rechten Block */
   .block .menu ul, .block .menu ul ul { border-color: #fff; margin-bottom: 0;}
   .block .menu a, .drilldown .menu a { margin-left: 0; padding-left: 25px; }
-  .block .menu a:hover, .drilldown .menu a:hover { background: white url(/profiles/openatrium/themes/ginkgo/images/sprite_base.png) 0px -60px no-repeat}
-
+  .block .menu a.collapsed:hover, .drilldown .menu a.collapsed:hover { background: url(/profiles/openatrium/themes/ginkgo/images/sprite_base.png) 0px -60px no-repeat}
+  .block .menu a.leaf:hover, .drilldown .menu a.leaf:hover { background: url(/profiles/openatrium/themes/ginkgo/images/sprite_base.png) 0px -110px no-repeat }
+  
 /* Bloecke */
 	
 	.page-region .block { margin-bottom: 20px; color: #404040 !important; }
